<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="step_view_model"
            type="com.example.kautilya.bakeover.ui.step.StepViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v4.view.ViewPager
            android:id="@+id/steps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/child_margin"
            android:layout_weight="9" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/back" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/next" />

        </RelativeLayout>

    </LinearLayout>
</layout>