<layout>


    <data>

        <variable
            name="steps_videos"
            type="com.example.kautilya.bakeover.ui.stepvideo.StepVideoViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:baselineAligned="false"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:name="com.example.kautilya.bakeover.ui.master.ItemListFragment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            app:layoutManager="LinearLayoutManager" />

        <FrameLayout
            android:id="@+id/item_detail_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8" />

    </LinearLayout>
</layout>