<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="step_list_view"
            type="com.example.kautilya.bakeover.ui.steplist.StepListViewModel" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ListView
            android:id="@+id/step_list_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>