package com.example.kautilya.bakeover;


import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;
import android.view.ViewGroup;

import com.example.kautilya.bakeover.ui.main.MainActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.swipeRight;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;

@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> mainActivityTestActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void testMobile() {


        onView(nthChildOf(withId(R.id.simple_list), 0)).check(matches(withText("Nutella Pie")));

        onView(nthChildOf(withId(R.id.simple_list), 0)).perform(click());

        onView(withId(R.id.view_steps)).check(matches(isDisplayed())).perform(click());

        onView(withId(R.id.step_list_desc)).check(matches(isDisplayed())).perform(click());
        onView(withId(R.id.steps)).perform(swipeRight());
        onView(withId(R.id.next)).perform(click());
        onView(withId(R.id.back)).perform(click());
    }


    @Test
    public void testTablet() {


        onView(nthChildOf(withId(R.id.grid), 0)).check(matches(withText("Nutella Pie")));
        onView(nthChildOf(withId(R.id.grid), 0)).perform(click());

        onView(withId(R.id.item_detail_container)).check(matches(isDisplayed()));
        onView(withId(R.id.list)).check(matches(isDisplayed()));
        onView(nthChildOf(withId(R.id.list), 0)).perform(click());

        onView(withId(R.id.steps)).perform(swipeRight());
        onView(withId(R.id.next)).perform(click());
        onView(withId(R.id.back)).perform(click());
    }

    // As on data is not working with the recycler this method will find out the child posotion of recycler view
    public static Matcher<View> nthChildOf(final Matcher<View> parentMatcher, final int childPosition) {
        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("with " + childPosition + " child view of type parentMatcher");
            }

            @Override
            public boolean matchesSafely(View view) {
                if (!(view.getParent() instanceof ViewGroup)) {
                    return parentMatcher.matches(view.getParent());
                }

                ViewGroup group = (ViewGroup) view.getParent();
                return parentMatcher.matches(view.getParent()) && group.getChildAt(childPosition).equals(view);
            }
        };
    }
}
